Добавил описания для пары методов api.
