# app/app/Http/Controllers/Controller.php
@@ -10,21 +10,30 @@ use OpenApi\Annotations as OA;
 
 /**
  * @OA\Info(
- *      version="1.0.0",
- *      title="API documentation for blog example.",
- *      description="Implementation of Swagger with in Laravel",
- *      @OA\Contact(
- *          email="sergmoro1@ya.ru"
- *      ),
- *      @OA\License(
- *          name="MIT",
- *          url="https://mit-license.org/"
- *      )
+ *     version="1.0.0",
+ *     title="API documentation for blog example.",
+ *     description="Implementation of Swagger with in Laravel",
+ *     @OA\Contact(
+ *         email="sergmoro1@ya.ru"
+ *     ),
+ *     @OA\License(
+ *         name="MIT",
+ *         url="https://mit-license.org/"
+ *     )
  * )
  *
  * @OA\Server(
- *      url="http://localhost:8080",
- *      description="Blog API Server"
+ *     url="http://localhost:8080",
+ *     description="Blog API Server"
+ * )
+ * 
+ * @OA\SecurityScheme(
+ *     securityScheme="basicAuth",
+ *     in="header",
+ *     name="Authorization",
+ *     type="http",
+ *     description="Basic authentication by email & password.",
+ *     scheme="basic"
  * )
  */
 class Controller extends BaseController
